# file_service

./: .pre-commit-config.yaml  Dockerfile
.github/workflows/: main.yaml
src/: .pre-commit-config.yaml  config.py  containers.py  pyproject.toml
src/api/: files.py  main.py
src/application/enums/: buckets.py  file_type.py
src/application/interactors/: exceptions.py  file_manager_interactor.py
src/application/interfaces/: get_content_type.py  minio_interface.py
src/application/use_cases/: file_manager_use_case.py
src/infra/services/content_type/: get_content_type_service.py
src/infra/services/minio/: minio_service.py
