[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "DenisHrtn",email = "denispython16@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pre-commit (>=4.2.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
